Use URLs instead of actual files in exportitems from S3 systems. Update simplex to 25 Add subscript button to mathquill editor Bug fix overflow hidden in inset div in assessment Treat contentdeveloper like instructor on LTI launch Extend AMtoMQ to handle more symbols

--- a/assessment/mathtest.css
+++ b/assessment/mathtest.css
@@ -162,7 +162,7 @@ div.inset {
 	margin-left: 155px;
 	margin-right: 10px;
 	padding-left: 20px;
-	overflow: hidden;
+	overflow-x: auto;
 }
 
 div.right {
